manifests_back/alertmanager-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: alertmanager
  name: alertmanager-nodeport
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9093
    nodePort: 30007
  selector:
    app: prometheus
    component: alertmanager
  type: NodePort
