manifests_back/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: alertmanager
  labels:
    app: prometheus
    component: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9093
  selector:
    app: prometheus
    component: alertmanager
  type: ClusterIP
