manifests_back/cocktail-monitoring.yaml
kind: Service
apiVersion: v1
metadata:
  name: cocktail-monitoring-np
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30008
  selector:
    app: cocktail-monitoring

---
kind: Service
apiVersion: v1
metadata:
  name: cocktail-monitoring
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 9004
      targetPort: 9000
  selector:
    app: cocktail-monitoring
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cocktail-monitoring
  name: cocktail-monitoring
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cocktail-monitoring
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cocktail-monitoring
    spec:
      containers:
      - env:
        - name: PROMETHEUS_URL
          value: http://prometheus.monitoring
        - name: COCKTAIL_URL
          value: http://cocktail-api.cocktail-system:8080
        - name: ALERT_URL
          value: http://alertmanager.monitoring
        - name: USE_CACHE
          value: "true"
        - name: LOGGING_LEVEL
          value: INFO
        image: regi.acornsoft.io/cocktail-common/cockail-monitoring-api:0.0.1.B000089
        imagePullPolicy: IfNotPresent
        name: cocktail-monitoring-01
        ports:
        - containerPort: 9000
          name: port-gnbr
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - AUDIT_WRITE
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - NET_BIND_SERVICE
            - NET_RAW
            - SETGID
            - SETFCAP
            - SETPCAP
            - SETUID
            - SYS_CHROOT
