manifests_back/cocktail-sm-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cocktail-api
  name: cocktail-api
  namespace: cocktail-system
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: cocktail-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cocktail-api
  namespace: cocktail-system
  labels:
    app: cocktail-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cocktail-api
  template:
    metadata:
      labels:
        app: cocktail-api
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
      - env:
        - name: CMDB_DRIVER
          value: org.mariadb.jdbc.Driver
        - name: CMDB_URL
          value: jdbc:mariadb://cocktail-cmdb:3306/cocktail?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
        - name: CMDB_USER
          value: cocktail
        - name: CMDB_PASSWORD
          value: C0ckt@il
        - name: CLIENT_CALLBACK_PATH
          value: /callback/api/topic
        - name: BUILD_ADD_JOB_URL
          value: /job/BUILD
        - name: BUILD_DELETE_JOB_URL
          value: /job/{job-id}/BUILD
        - name: BUILD_USE_REGISTER
          value: "1"
        - name: REGISTRY_URL
          value: https://regi.acornsoft.io
        - name: REGISTRY_USER
          value: admin
        - name: REGISTRY_PASSWORD
          value: C0ckt@1lAdmin
        - name: BUILD_GET_LATEST_BUILD_IMAGE_URL
          value: /task/{task-id}/latest/images
        - name: BUILD_RUN_BUILD_TASK_URL
          value: /task/{task-id}/BUILD
        - name: CLIENT_HOST
          value: http://cocktail-client-cluster-ip
        - name: BUILDER_HOST
          value: http://cocktail-api:8080/builder
        - name: GCP_BILLING_BUCKET
          value: cc-billing-data
        - name: GCP_BILLING_FILE_PREFIX
          value: cc-billing-
        - name: LOG_LEVEL
          value: INFO
        - name: MONITORING_HOST
          value: http://cocktail-monitoring.monitoring:9004/monitoring-api
        - name: JAVA_OPTIONS
          value: '-server -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap '
        - name: SERVER_TYPE
          value: SOMAC
        - name: DOCKER_URL
          value: https://regi.acornsoft.io
        - name: BUILDER_IMAGE
          value: regi.acornsoft.io/cocktail-common/builder-base-image-master:2.3.0.B000006
        - name: CA_PEM
          value: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlEQ1RDQ0FmR2dBd0lCQWdJSkFNU2NXenVocG1DcE1BMEdDU3FHU0liM0RRRUJDd1VBTUJzeEdUQVhCZ05WDQpCQU1NRUdsd0xURTNNaTB6TVMweU5TMHhPRFV3SGhjTk1UY3hNREU1TURjeU5qTXdXaGNOTWpjeE1ERTNNRGN5DQpOak13V2pBYk1Sa3dGd1lEVlFRRERCQnBjQzB4TnpJdE16RXRNalV0TVRnMU1JSUJJakFOQmdrcWhraUc5dzBCDQpBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUE4U0lZSE8yWVcvWXptVVJ3V055UEJKa1A0RWxXZFRSVmxoZTk0ZWlDDQpiTFVVOFZvNkJUYy9TNVFUN2I4S2NSdmtBRHNDcEpQR2V2RXNyM0dmZWZpc2xjVW5pTjlSZFQ4MFdPenZEOHZoDQpuM1U [...]
        - name: CERT_PEM
          value: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlDeFRDQ0FhMmdBd0lCQWdJQkF6QU5CZ2txaGtpRzl3MEJBUXNGQURBYk1Sa3dGd1lEVlFRRERCQnBjQzB4DQpOekl0TXpFdE1qVXRNVGcxTUI0WERURTNNVEF4T1RBM01qWXpNRm9YRFRJM01UQXhOekEzTWpZek1Gb3dHREVXDQpNQlFHQTFVRUF3d05aRzlqYTJWeUxtTnNhV1Z1ZERDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDDQpBUW9DZ2dFQkFPVWpPMTFBUzRjdVJwckNUSXVqakd5ZmxTdW5Xbnh4Zk13UDF5NXo1VlpOZmxXakNKVVphTm41DQpNWDN0Vit5T0p3ZFVHLzVrSzZXVHMvUzJRYVBWTUpBc2NENkhYbERqVGhZdXpaWGFxak9pZVVpUldIcVc1ZGNLDQpNam0 [...]
        - name: KEY_PEM
          value: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRXBBSUJBQUtDQVFFQTVTTTdYVUJMaHk1R21zSk1pNk9NYkorVks2ZGFmSEY4ekEvWExuUGxWazErVmFNSQ0KbFJsbzJma3hmZTFYN0k0bkIxUWIvbVFycFpPejlMWkJvOVV3a0N4d1BvZGVVT05PRmk3TmxkcXFNNko1U0pGWQ0KZXBibDF3b3lPYnF0YzJOQmRtWmVoQm52K3ZHRWZyUFcxUkFLa1Q5Z3lmQ0pWYmI2ZkowV05uZS9hMnJqS0pvTA0KOVl3eEYyOEZkN1diU0F4dS9jeWR6bm1CdE5sa0hFOHdQVXRMNDNFWDZSTytzc0dkUWM1SFFGaEJMaTR1WlBNWg0KZUFRL252NmEwbHdqcEdteHV2OW1NbmZVdVFydjRVQnNSTk8vdUx1M3Q2VFNNT2dFT29ubWJGVGtRajlPMHFNWA0 [...]
        - name: BUILD_DB_URL
          value: jdbc:mariadb://cocktail-cmdb:3306/builder?useUnicode=true&charaterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
        image: regi.acornsoft.io/cocktail-common/cocktail-sm-api-develop:2.3.1.B000171
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /api/check/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 80
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 10
        name: cocktail-api-01
        ports:
        - containerPort: 8080
          name: port-uamx
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/check/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 70
          periodSeconds: 12
          successThreshold: 1
          timeoutSeconds: 10
        securityContext:
          capabilities:
            add:
            - AUDIT_WRITE
            - DAC_OVERRIDE
            - FOWNER
            - FSETID
            - KILL
            - NET_BIND_SERVICE
            - NET_RAW
            - SETGID
            - SETFCAP
            - SETPCAP
            - SETUID
            - SYS_CHROOT
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
