manifests_back/cocktail-sm-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cocktail-cmdb
  namespace: cocktail-system
  labels:
    app: cocktail-cmdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cocktail-cmdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cocktail-cmdb
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
      - image: regi.acornsoft.io/cocktail-common/cocktail-sm-db-develop:2.3.1.B000025
        name: cocktail-cmdb-01
        ports:
        - containerPort: 3306
          name: port-cmdb
          protocol: TCP
        volumeMounts:
        - name: mysqldata
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /cocktail-initdata.d
      volumes:
      - name: mysqldata
        persistentVolumeClaim:
          claimName: cocktail-cmdb-pvc-mysqldata
      - name: mysql-initdb
        configMap:
          name: registcluster-script
---
apiVersion: v1
kind: Service
metadata:
  name: cocktail-cmdb
  namespace: cocktail-system
  labels:
    app: cocktail-cmdb
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: cocktail-cmdb
