manifests_back/alertmanager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager
  labels:
    app: prometheus
    component: alertmanager
spec:
  podSelector:
    matchLabels:
      app: prometheus
      component: alertmanager
  ingress:
    - from:
      - podSelector:
          matchLabels:
            component: prometheus
    - ports:
      - port: 9093
