manifests_back/prometheus-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus
  labels:
    app: prometheus
    component: prometheus
spec:
  podSelector:
    matchLabels:
      app: prometheus
      component: prometheus
  ingress:
    - ports:
      - port: 9090
